Fixed wrapping on download pages

--- a/styles/screen.css
+++ b/styles/screen.css
@@ -465,7 +465,7 @@ table td {
 .download_link {
     text-align: center;
     margin: 0 0 40px;
-    font-size: 30px;
+    font-size: 26px;
 }
 
 
